adding js and separating into individual files

--- a/web/index.html
+++ b/web/index.html
@@ -3,69 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src self; img-src vscode-webview-resource:; script-src vscode-webview-resource: 'self' 'unsafe-inline'; style-src vscode-webview-resource: 'self' 'unsafe-inline'; ">
     <title>Simple Chat Interface</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .chat-container {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            display: flex;
-            flex-direction: column;
-            margin: 20px auto;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .message {
-            padding: 10px;
-            margin: 10px;
-            border-radius: 10px;
-            max-width: 70%;
-        }
-
-        .user {
-            background-color: #3498db;
-            color: #fff;
-            align-self: flex-end;
-        }
-
-        .bot {
-            background-color: #e0e0e0;
-            color: #333;
-            align-self: flex-start;
-        }
-
-        .message-input-container {
-            display: flex;
-            align-items: center;
-            margin-top: auto;
-        }
-
-        .message-input {
-            flex-grow: 1;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 5px;
-        }
-
-        .send-button {
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px;
-            margin-left: 10px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="chat-container">
