ability to select a problem

--- a/web/index.html
+++ b/web/index.html
@@ -9,13 +9,7 @@
 </head>
 <body>
     <div class="chat-container">
-        <div id="chat-container" class="chat-message-container">
-            <div class="message bot">
-                <p>Hello! I can assist you with your homework assignment! What do you need help with?</p>
-            </div>
-        </div>
-        <!-- You can add more messages here -->
-
+        <div id="chat-container" class="chat-message-container"></div>
         <div class="message-input-container">
             <input id="message-box" type="text" class="message-input" placeholder="Type your message...">
             <button id="send-button" class="send-button">Send</button>
